# sdltest

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README  acinclude.m4  autogen.sh  clean.sh  configure.ac  defines.h  doxygen.cfg  find.sh  genobject.c  gl.c  gl.h  main.c  mainloop.c  mainloop.h  ode.h  out.txt  shaders.c
doc/: sdltest.texi
src/: defines.h  genobject.c  genobject.h  gl.c  gl.h  lua.c  lua.h  main.c  mainloop.c  mainloop.h  ode.c  shaders.c  shaders.h
