AC_INIT([SDL/OpenGL Test Program], [0.1], [maxifoo@gmail.com], [sdltest], [https://github.com/Spekkio])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 no-define])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC
PKG_CHECK_MODULES([DEPS], [sdl >= 1.2.14 ode >= 0.11.1 glu >= 8.0.4 glew >= 1.7.0])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
