AC_INIT([SDL/OpenGL Test Program], [0.1], [maxifoo@gmail.com], [sdltest], [https://github.com/Spekkio])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CC_STDC
AM_PROG_CC_C_O
#AM_PROG_LEX
#AC_PROG_YACC
#AC_PROG_LIBTOOL
#AC_CONFIG_MACRO_DIR([m4])
#DX_HTML_FEATURE(ON)
#DX_CHM_FEATURE(OFF)
#DX_CHI_FEATURE(OFF)
#DX_MAN_FEATURE(OFF)
#DX_RTF_FEATURE(OFF)
#DX_XML_FEATURE(OFF)
#DX_PDF_FEATURE(OFF)
#DX_PS_FEATURE(OFF)
#DX_INIT_DOXYGEN(sdltest, doxygen.cfg, doc)
#AC_C_INLINE
#AC_TYPE_INT16_T
#AC_TYPE_INT32_T
#AC_TYPE_INT64_T
#AC_TYPE_INT8_T
#AC_TYPE_SIZE_T
#AC_TYPE_UINT16_T
#AC_TYPE_UINT32_T
#AC_TYPE_UINT64_T
#AC_TYPE_UINT8_T
#AC_C_VOLATILE
#AC_CHECK_TYPES([ptrdiff_t])
PKG_CHECK_MODULES([DEPS], [sdl >= 1.2.14 ode >= 0.11.1 glu >= 8.0.4 glew >= 1.7.0])
AC_HEADER_STDC
AC_HEADER_STDBOOL
AC_C_CONST
AC_CHECK_HEADER(GL/gl.h)
AC_CHECK_HEADER(GL/glew.h)
AC_CHECK_HEADER(GL/glu.h)
AC_CHECK_HEADER(SDL/SDL.h)
AC_CHECK_HEADER(ode/ode.h)
AC_CHECK_HEADER(math.h)
AC_CHECK_FUNCS([printf])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
